<resources>
    <string name="app_name">18_Level</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="Avatar" translatable="false">Avatar</string>
    <string name="Login" translatable="false">Login</string>
    <string name="Password" translatable="false">Password</string>
    <string name="Name1" translatable="false">Имя</string>
    <string name="Name2" translatable="false">Фамилия</string>
    <string name="Name3" translatable="false">Отчество</string>
    <string name="Done" translatable="false">Готово</string>


</resources>