<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/buttonAva2"
        android:layout_width="207dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:onClick="onClickAvatar"
        android:text="@string/Avatar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edName4"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Name3"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edName5"
        app:layout_constraintStart_toStartOf="@+id/edName5"
        app:layout_constraintTop_toBottomOf="@+id/edName5"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Name2"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edName6"
        app:layout_constraintStart_toStartOf="@+id/edName6"
        app:layout_constraintTop_toBottomOf="@+id/edName6"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Name1"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edPassword2"
        app:layout_constraintStart_toStartOf="@+id/edPassword2"
        app:layout_constraintTop_toBottomOf="@+id/edPassword2"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edLogin2"
        app:layout_constraintStart_toStartOf="@+id/edLogin2"
        app:layout_constraintTop_toBottomOf="@+id/edLogin2" />

    <EditText
        android:id="@+id/edLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/buttonAva2"
        app:layout_constraintStart_toStartOf="@+id/buttonAva2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAva2" />

    <Button
        android:id="@+id/buttonDone2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickDone"
        android:text="@string/Done"
        app:layout_constraintEnd_toEndOf="@+id/edPassword2"
        app:layout_constraintStart_toStartOf="@+id/edPassword2"
        app:layout_constraintTop_toBottomOf="@+id/edName4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/face_one" />
</androidx.constraintlayout.widget.ConstraintLayout>